# HDM505B

./: CMakeLists.txt  HDM50.cpp  HDM50.h  compass.cpp  compass.h  dials.cpp  dials.h  main.cpp
test/: CMakeLists.txt  test_HDM50_protocol.cpp
